# collectd

./: .cirrus.yml  .clang-format  .configure.in.swo  .cproject  .gitignore  .gitmodules  .mailmap  .project  .travis.yml  AUTHORS  BUILD  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  PPM_README  README  README.md  TAGS  TODO  aclocal.m4  benchmark.csv  benchmark_small.csv  bootstrap.sh  build.sh  clean  clean.sh  collectd.conf  collectd.spec  configure  configure.ac  configure.in  mqtt.c  mqtt.conf  pfutils.c  (+15 more)
bindings/: Makefile  Makefile.am  Makefile.in
bindings/java/: Makefile  Makefile.am  Makefile.in
bindings/java-tests/: Makefile.am  README
bindings/perl/: Collectd.pm  Makefile.PL  uninstall_mod.pl
bindings/perl/Collectd/: Makefile.PL  Unixsock.pm
bindings/perl/lib/: Collectd.pm
bindings/perl/t/: 00_load.t  01_methods.t
distbench/: Makefile.am  bkjg.c  bkjg.csv  distribution.h  function.h  main.c  margalit.c  margalit.csv  run-all.sh  sshmidt.c  sshmidt.csv
src/: Makefile.am  Makefile.in  TAGS  aggregation.c  amqp.c  amqp1.c  aoe_stats.c  apache-log.c  apache.c  apcups.c  apple_sensors.c  aquaero.c  arangodb.c  arc.c  ascent.c  barometer.c  basic_aggregator.c  battery.c  battery_statefs.c  beancounter.c  bind.c  btrfs.c  buddyinfo.c  capabilities.c  capabilities_test.c  cbugzilla.c  ceph.c  ceph_test.c  cgroups.c  cgroups_cpuacct.c  check_presence.c  check_uptime.c  chrony.c  collectd-basic_aggregator.pod  collectd-btrfs.pod  collectd-cbugzilla.pod  collectd-connectivity.pod  collectd-email.5  collectd-email.pod  collectd-exec.5  (+579 more)
src/compat/: closefrom.c  missing.h
src/daemon/: Makefile.am  Makefile.in  cmd.c  cmd.h  cmd_windows.c  collectd.c  collectd.h  collectd_linux.c  collectd_svc.c  collectd_svc_config.c  collectd_svc_control.c  collectd_win.c  collectd_windows.c  common.c  common.h  common_test.c  configfile.c  configfile.h  data_set.c  data_set.h  distribution.c  distribution.h  distribution_benchmark.c  distribution_test.c  filter_chain.c  filter_chain.h  globals.c  globals.h  meta_data.c  meta_data.h  meta_data_test.c  metric.c  metric.h  metric_test.c  plugin.c  plugin.h  plugin_mock.c  resource.c  resource.h  svc.c  (+48 more)
src/gluster_collectd/: README.md  gluster_collectd.spec  makerpm.sh  pkgconfig.py  requirements.txt  setup.py
src/gluster_collectd/conf/: python.conf
src/gluster_collectd/src/: gluster.py  gluster_utils.py  ini2json.py
src/gluster_collectd/types/: types.db.gluster
src/libcollectdclient/: Makefile  Makefile.am  Makefile.in  TAGS  client.c  client.h  lcc_features.h  lcc_features.h.in  libcollectdclient.pc  libcollectdclient.pc.in  network.c  network_buffer.c  network_parse.c  network_parse_test.c  server.c  server_test.c  tags
src/libcollectdclient/collectd/: client.h  lcc_features.h  lcc_features.h.in  network.h  network_buffer.h  network_parse.h  server.h  stdendian.h  types.h
src/libconfig/: AUTHORS  LICENSE  Makefile.am  README  TODO  compat.h  conf_apache.c  conf_apache.h  conf_colon.c  conf_colon.h  conf_equal.c  conf_equal.h  conf_section.c  conf_section.h  conf_space.c  conf_space.h  conf_xml.c  conf_xml.h  getuid.c  getuid.h  libconfig.c  libconfig.h  libconfig_private.h  strsep.c  strsep.h  strtoll.c  strtoll.h  test-lc.c  win32.h
src/libiptc/: Makefile.am  README.collectd  libip4tc.c  libip6tc.c  libip6tc.h  libiptc.c  libiptc.h  linux_list.h
src/libmongoc/: .gitignore  CONTRIBUTING.md  GIT_REVISION  HISTORY.md  Makefile  Makefile.am  Makefile.in  README.md  RELEASE.md  SConstruct  aclocal.m4  configure  doxygenConfig  runtests.sh
src/libmongoc/src/: bcon.c  bcon.h  bson.c  bson.h  encoding.c  encoding.h  env.c  env.h  gridfs.c  gridfs.h  libmongoc-1.0.pc  libmongoc-priv.pc  libmongoc-ssl-1.0.pc  md5.c  md5.h  mongo.c  mongo.h
src/libmongoc/test/: auth_test.c  bcon_test.c  benchmark_test.c  bson_alloc_test.c  bson_subobject_test.c  bson_test.c  commands_test.c  connect_test.c  count_delete_test.c  cpptest.cpp  cursors_test.c  env_posix_test.c  env_win32_test.c  errors_test.c  examples_test.c  functions_test.c  gridfs_test.c  helpers_test.c  replica_set_test.c  replset_test.c  simple_test.c  test.h  unix_socket_test.c  update_test.c  validate_test.c  write_concern_test.c
src/liboconfig/: ChangeLog  Makefile  Makefile.am  Makefile.in  TAGS  aux_types.h  oconfig.c  oconfig.h  parser.c  parser.h  parser.y  scanner.c  scanner.l  tags
src/liboping/: ChangeLog  Makefile  Makefile.am  README  liboping.c  liboping.h  oping.h  test_liboping.c
src/libping/: Makefile.am  config.h.in  echo.c  echo.h  http.c  http.h  linux.h  memory.c  memory.h  ping.c  ping.h  pop3.c  pop3.h  private.c  private.h  setup.h  smtp.c  smtp.h  sock.c  sock.h  url.c  url.h  util.c  util.h
src/mock/: plugin.c  utils_cache.c  utils_time.c
src/owniptc/: Makefile.am  README.collectd  ipt_kernel_headers.h  libip4tc.c  libip6tc.c  libip6tc.h  libiptc.c  libiptc.h  libxtc.h  xtables.h
src/prometheus/: ast.c  ast.h  parser.y  prometheus.c  scanner.l
src/python/: connman.py  ofono.py
src/tests/: common_test.c  macros.h  test_common.c  test_utils_avltree.c  test_utils_heap.c  test_utils_mount.c  test_utils_vl_lookup.c  utils_avltree_test.c  utils_heap_test.c  utils_mount_test.c
src/tests/mock/: plugin.c  utils_cache.c
src/utils/avltree/: avltree.c  avltree.h  avltree_test.c
src/utils/cmds/: cmds.c  cmds.h  cmds_test.c  evalstate.c  evalstate.h  flush.c  flush.h  flushstate.c  flushstate.h  getthreshold.c  getthreshold.h  getval.c  getval.h  listval.c  listval.h  parse_option.c  parse_option.h  putmetric.c  putmetric.h  putnotif.c  putnotif.h  putval.c  putval.h  putval_test.c
src/utils/common/: common.c  common.h  common_test.c
src/utils/config_cores/: config_cores.c  config_cores.h  config_cores_test.c
src/utils/crc32/: crc32.h
src/utils/curl_stats/: curl_stats.c  curl_stats.h  curl_stats_test.c
src/utils/db_query/: db_query.c  db_query.h
src/utils/dmi/: dmi.c  dmi.h
src/utils/dns/: dns.c  dns.h
src/utils/dpdk/: dpdk.c  dpdk.h
src/utils/gce/: gce.c  (+1 more)
(+474 files in other folders)
